Fjerner contextpath (expand fase med både /api og /fplos/api)